--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^13.5.3",
     "lerna": "^3.20.2",
+    "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
 }
