--- a/packages/elif/package.json
+++ b/packages/elif/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "main": "dist/elif.js",
   "directories": {
-    "lib": "lib",
+    "src": "src",
     "test": "__tests__"
   },
   "files": [
@@ -43,5 +43,8 @@
     "ts-jest": "^25.1.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "graphql": "^14.6.0"
   }
 }
